add : crud with dropbox storage

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,12 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    var email = Context.Session.GetString("UserEmail");
+    var jwt = Context.Session.GetString("JwtToken");
+
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h3 class="display-5"> @email</h3>
+    <h5> @jwt</h5>
 </div>
