--- a/Views/Phone/CreatePhone.cshtml
+++ b/Views/Phone/CreatePhone.cshtml
@@ -9,7 +9,7 @@
 
     <p class="card-text">
         <div class="col-md-12">
-            <form asp-action="CreatePhone" class="row g-3">
+            <form asp-action="CreatePhone" class="row g-3" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                 <div class="form-group col-md-4">
@@ -38,19 +38,20 @@
                     <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
                 <div class="form-group col-md-4">
-                    <label asp-for="UrlImage" class="control-label"></label>
-                    <input asp-for="UrlImage" class="form-control" required />
-                    <span asp-validation-for="UrlImage" class="text-danger"></span>
+                    <label asp-for="Image" class="control-label"></label>
+                    <input name="Image" type="file" class="form-control" required />
+                    <span asp-validation-for="Image" class="text-danger"></span>
                 </div>
+
                 <div class="d-flex justify-content-between w-100">
-                    <div>
-                        <a type="button" asp-action="IndexPhone" class="btn btn-outline-secondary">Back to List</a>
-                    </div>
                     <div class="d-flex justify-content-center flex-grow-1">
                         <input type="submit" value="Create" class="btn btn-success" />
                     </div>
                 </div>
             </form>
+            <div>
+                <a type="button" asp-action="IndexPhone" class="btn btn-outline-secondary">Back to List</a>
+            </div>
         </div>
     </p>
 </div>
