--- a/Views/Phone/DetailsPhone.cshtml
+++ b/Views/Phone/DetailsPhone.cshtml
@@ -49,7 +49,22 @@
                 @Html.DisplayNameFor(model => model.UrlImage)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.UrlImage)
+                @{
+                    // Agregar ?raw=1 al final de la URL
+                    if (Model.UrlImage is not null)
+                    {
+                        var urlImagen = Model.UrlImage;
+                        if (!urlImagen!.Contains("?raw=1"))
+                        {
+                            // Si no tiene ?raw=1, agregamos al final
+                            urlImagen += urlImagen.Contains("?") ? "&raw=1" : "?raw=1";
+                        }
+                        <img src="@urlImagen" alt="Phone Image" style="width: 200px; height: 200px;" />
+                        <a asp-action="DeleteImagePhone" asp-route-path="@Model.ImagePath" asp-route-id="@Model.PhoneId" type="button" class="btn btn-danger">
+                            <i class="bi bi-trash3"></i>
+                        </a>
+                    }
+                }
             </dd>
         </dl>
         <div class="d-flex justify-content-between w-100">
