--- a/Views/Phone/UpdatePhone.cshtml
+++ b/Views/Phone/UpdatePhone.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PruebaFireBase.Models.PhoneModel
 
 @{
-    ViewData["Title"] = "UpdatePhone";
+    ViewData["Title"] = "UpdatePhone";    
 }
 
 <div class="card">
@@ -9,7 +9,7 @@
 
     <p class="card-text">
         <div class="col-md-12">
-            <form asp-action="PhoneUpdate" asp-controller="Phone" method="post" class="row g-3">
+            <form asp-action="PhoneUpdate" asp-controller="Phone" method="post" class="row g-3" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                 <input name="id" value="@Model.PhoneId" readonly hidden/>
@@ -41,9 +41,21 @@
                     <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
                 <div class="form-group col-md-4">
-                    <label asp-for="UrlImage" class="control-label"></label>
-                    <input asp-for="UrlImage" class="form-control" />
-                    <span asp-validation-for="UrlImage" class="text-danger"></span>
+                    <label asp-for="Image" class="control-label"></label>
+                    <input asp-for="Image" type="file" class="form-control" />
+                    @{
+                        if (Model.UrlImage is not null)
+                        {
+                            var urlImagen = Model.UrlImage;
+                            if (!urlImagen!.Contains("?raw=1"))
+                            {
+                                // Si no tiene ?raw=1, agregamos al final
+                                urlImagen += urlImagen.Contains("?") ? "&raw=1" : "?raw=1";
+                            }
+                            <img src="@urlImagen" alt="Phone Image" width="100px" height="100px" />
+                        }
+                    }
+                    <span asp-validation-for="Image" class="text-danger"></span>
                 </div>
                 <div class="d-flex justify-content-between w-100">
                     <div>
